@@ -13,7 +13,7 @@ jei_version = 15.2.0.23
 curios_version = 5.2.0-beta.3+1.20.1
 
 modid = l2hostility
-ll_version = 2.4.4-pre2
+ll_version = 2.4.4
 lljij = true
 rootMod = false
 
