@@ -1,6 +1,7 @@
 package dev.xkmc.l2hostility.content.capability.chunk;
 
 import dev.xkmc.l2hostility.content.capability.mob.MobTraitCap;
+import dev.xkmc.l2hostility.content.config.WorldDifficultyConfig;
 import dev.xkmc.l2hostility.content.logic.MobDifficultyCollector;
 import dev.xkmc.l2hostility.init.L2Hostility;
 import dev.xkmc.l2hostility.init.data.LHConfig;
@@ -73,9 +74,10 @@ public class ChunkDifficulty implements RegionalDifficultyModifier {
 		check();
 		var levelDiff = L2Hostility.DIFFICULTY.getMerged()
 				.levelMap.get(chunk.getLevel().dimensionTypeId().location());
-		if (levelDiff != null) {
-			instance.acceptConfig(levelDiff);
+		if (levelDiff == null) {
+			levelDiff = WorldDifficultyConfig.defaultLevel();
 		}
+		instance.acceptConfig(levelDiff);
 		getSection(pos.getY()).modifyInstance(chunk.getLevel().getBiome(pos), instance);
 		instance.acceptBonusLevel((int) Math.round(LHConfig.COMMON.distanceFactor.get() *
 				Math.sqrt(pos.getX() * pos.getX() + pos.getZ() * pos.getZ())));
